Initial work updating the API contract for todo lists Initial work updating the DB schema for todo lists
